# mostly-harmless-api-sample

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: error.py  log_initializer.py  main.py
src/routers/: quaggy.py
src/schemas/: quaggy.py
src/services/: quaggy_manager.py
tests/api/: test_quaggy.py
tests/services/: test_quaggy_manger.py
tools/: auto_ver_uploader.py  auto_version_updater.py  openapi_exporter.py
