[project]
name = "mostly-harmless-api-sample"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "quag-cactus", email = ""},
]
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.5",
    "asgi-correlation-id>=4.3.2",
    "loguru>=0.7.2",
    "fastapi-versionizer>=4.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.8.0",
]
pytest = [
    "pytest-mock>=3.14.0",
]
test = [
    "httpx>=0.27.2",
]

[tool.pdm.scripts]
dev = "uvicorn src.main:app --port=8000 --reload"
lint = "black ./"
test = "pytest tests"
zip = { shell = "git archive HEAD --format zip -o ../mostly-harmless-api-sample-`git describe --tags`.zip" }